--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                             <a href="index.html" data-i18n="home">Home</a>
                         </li>
                         <li>
-                            <a href="#" data-i18n="school">Our School</a>
+                            <a href="./our_school/index.html" data-i18n="school">Our School</a>
                         </li>
                         <li>
-                            <a href="#" data-i18n="gallery">Gallery</a>
+                            <a href="./gallery/index.html" data-i18n="gallery">Gallery</a>
                         </li>
                         <li>
-                            <a href="#" data-i18n="teachers-classes">Teachers & Classes</a>
+                            <a href="./teachers_classes/index.html" data-i18n="teachers-classes">Teachers & Classes</a>
                         </li>
                         <li>
                             <a href="./contact/index.html" data-i18n="contact_us">Contact Us</a>
@@ -64,143 +64,149 @@
         </nav>
     </header>
     <!--Head ends here-->
+    <main>
 
-    <!--Hero-->
-    <section class="hero-area">
-        <div class="content-wrapper">
-            <div class="hero-text">
-                <h1 id="welcome" data-i18n="welcome_message">Welcome to Phanita's Baby Club</h1>
-                <h2 data-i18n="hero_txt1">Looking for a second place so your child feels like at home?</h2>
-                <h3 data-i18n="hero_txt2">Our Baby club offers all the safety and tenderness your child can find at home
-                </h3>
-                <p data-i18n="hero_p1">OPEN MONDAY-FRIDAY</p>
-                <P data-i18n="hero_p2">6.45AM - 17.00PM</P>
-                <a class="phone-number" href="tel:+0035799578375" data-i18n="phone">(00357) 99 578 375</a>
-                <address class="address" data-i18n="address">
-                    11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol
-                </address>
-                <a class="email" href="mailto:phanita2008@hotmail.com">
-                    <span data-i18n="email">phanita2008@hotmail.com</span>
-                </a><br>
-                <a class="phone" href="tel:+35799578375">
-                    <button class="hero-cta" data-i18n="hero_cta_text">Talk to Us Today</button>
-                </a>
-            </div>
-            <div class="hero-img-container">
-                <img class="hero-img" src="./img/freetime-jam-Js_SgE4ekqc-unsplash.jpg"
-                    alt="little girl playing with building blocks">
-            </div>
-        </div>
-    </section>
-
-    <!--Who We Are-->
-    <section class="about-us">
-        <div class="content-wrapper">
-            <img class="long-logo" src="./img/long-log.jpg" alt="logo">
-            <div class="about-us-card">
-                <h2 data-i18n="aboutus_title">About Us</h2>
-                <h3 data-i18n="aboutus_aim">“Aiming to create complete people with strong personalities.
-                    And above all <span>LOVE, RESPECT, DEDICATION</span> to each child.”</h3>
-                <p data-i18n="aboutus_blurb1">Welcome to the nursery - childcare center for all-day care, employment and
-                    study "Phanita's Baby
-                    Club". This is a model preschool and education center, where your child will be properly educated,
-                    socialized and will be able to gradually integrate into society as a whole more easily.
-                    Phanita's Baby Club daycare center was founded in 2007 with all the specifications required by
-                    today's standards.</p>
-                <p data-i18n="aboutus_blurb2">We are located in the area of ​​Agios Sylas, Ypsonas and in between in the
-                    area of ​​the new
-                    Limassol Hospital and Kolossi.
-                    The station's main characteristic is a place of life and education.
-                    A space that is not a station for "parking" the child but on the contrary is a space for creation
-                    and learning, with a climate of warm human relationships between parents - children - teachers. A
-                    space of coexistence, collaboration, creation, sharing, love, offering...</p>
-            </div>
-            <div>
-                <img class="about-us-img" src="img/children-scribble.jpg" alt="children scribbling">
-            </div>
-        </div>
-    </section>
-
-    <!--Goals-->
-    <section class="our-goals">
-        <h2 class="why-us-title" data-i18n="why_us">Why Us</h2>
-        <div class="card-container">
-            <div class="card">
-                <div class="card-img">
-                    <img src="./img/play-dough.jpg" alt="playdough">
+        <!--Hero-->
+        <section class="hero-area">
+            <div class="content-wrapper">
+                <div class="hero-text">
+                    <h1 id="welcome" data-i18n="welcome_message">Welcome to Phanita's Baby Club</h1>
+                    <h2 data-i18n="hero_txt1">Looking for a second place so your child feels like at home?</h2>
+                    <h3 data-i18n="hero_txt2">Our Baby club offers all the safety and tenderness your child can find at
+                        home
+                    </h3>
+                    <p data-i18n="hero_p1">OPEN MONDAY-FRIDAY</p>
+                    <P data-i18n="hero_p2">6.45AM - 17.00PM</P>
+                    <a class="phone-number" href="tel:+0035799578375" data-i18n="phone">(00357) 99 578 375</a>
+                    <address class="address" data-i18n="address">
+                        11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol
+                    </address>
+                    <a class="email" href="mailto:phanita2008@hotmail.com">
+                        <span data-i18n="email">phanita2008@hotmail.com</span>
+                    </a><br>
+                    <a class="phone hero-cta" href="tel:+35799578375" data-i18n="hero_cta_text">Talk to Us Today</a>
                 </div>
-                <div class="card-text">
-                    <h3 data-i18n="principles">Our Basic Principles</h3>
-                    <ul>
-                        <li data-i18n="principles_li1">I work in a team</li>
-                        <li data-i18n="principles_li2">Each child has their own uniqueness and individuality.</li>
-                        <li data-i18n="principles_li3">The educational program is based on all the interdisciplinary
-                            modules of early childhood
-                            education and care, in accordance with education in Cyprus.</li>
-                    </ul>
+                <div class="hero-img-container">
+                    <img class="hero-img" src="./img/freetime-jam-Js_SgE4ekqc-unsplash.jpg"
+                        alt="little girl playing with building blocks">
                 </div>
             </div>
+        </section>
 
-            <div class="card">
-                <div class="card-img">
-                    <img src="./img/boy-building-blocks.jpg" alt="boy playing with building blocks">
+        <!--Who We Are-->
+        <section class="about-us">
+            <div class="content-wrapper">
+                <img class="long-logo" src="./img/long-log.jpg" alt="logo">
+                <div class="about-us-card">
+                    <h2 data-i18n="aboutus_title">About Us</h2>
+                    <h3 data-i18n="aboutus_aim">“Aiming to create complete people with strong personalities.
+                        And above all <span>LOVE, RESPECT, DEDICATION</span> to each child.”</h3>
+                    <p data-i18n="aboutus_blurb1">Welcome to the nursery - childcare center for all-day care, employment
+                        and
+                        study "Phanita's Baby
+                        Club". This is a model preschool and education center, where your child will be properly
+                        educated,
+                        socialized and will be able to gradually integrate into society as a whole more easily.
+                        Phanita's Baby Club daycare center was founded in 2007 with all the specifications required by
+                        today's standards.</p>
+                    <p data-i18n="aboutus_blurb2">We are located in the area of ​​Agios Sylas, Ypsonas and in between in
+                        the
+                        area of ​​the new
+                        Limassol Hospital and Kolossi.
+                        The station's main characteristic is a place of life and education.
+                        A space that is not a station for "parking" the child but on the contrary is a space for
+                        creation
+                        and learning, with a climate of warm human relationships between parents - children - teachers.
+                        A
+                        space of coexistence, collaboration, creation, sharing, love, offering...</p>
                 </div>
-                <div class="card-text">
-                    <h3 data-i18n="our_goals">Our Goals</h3>
-                    <ul>
-                        <li data-i18n="goals_li1">Socialization</li>
-                        <li data-i18n="goals_li2">Mutual respect</li>
-                        <li data-i18n="principles_li3">Cooperation</li>
-                        <li data-i18n="principles_li4">Self-esteem</li>
-                        <li data-i18n="principles_li5">Love for learning and creation</li>
-                        <li data-i18n="principles_li6">HAPPY FACES…</li>
-                    </ul>
+                <div>
+                    <img class="about-us-img" src="img/children-scribble.jpg" alt="children scribbling">
                 </div>
             </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="./img/foot-print.jpg" alt="childs footprint">
+        </section>
+
+        <!--Goals-->
+        <section class="our-goals">
+            <h2 class="why-us-title" data-i18n="why_us">Why Us</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/play-dough.jpg" alt="playdough">
+                    </div>
+                    <div class="card-text">
+                        <h3 data-i18n="principles">Our Basic Principles</h3>
+                        <ul>
+                            <li data-i18n="principles_li1">I work in a team</li>
+                            <li data-i18n="principles_li2">Each child has their own uniqueness and individuality.</li>
+                            <li data-i18n="principles_li3">The educational program is based on all the interdisciplinary
+                                modules of early childhood
+                                education and care, in accordance with education in Cyprus.</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="card-text">
-                    <h3 data-i18n="care_h3">Care and Education of Our Little Friends</h3>
-                    <ul>
-                        <li data-i18n="care_li1">Meets the needs for security, affection, love…</li>
-                        <li data-i18n="care_li2">Recreational activities (teamwork)</li>
-                        <li data-i18n="care_li3">Development of creativity of expression (mentally and skills)</li>
-                        <li data-i18n="care_li4">Free and creative play</li>
-                        <li data-i18n="care_li5">Development of initiative and independence</li>
-                        <li data-i18n="care_li6">Respect for everyone's cultural and religious identity</li>
-                        <li data-i18n="care_li7">To be able to socialize with all people (young and old)….</li>
-                    </ul>
+
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/boy-building-blocks.jpg" alt="boy playing with building blocks">
+                    </div>
+                    <div class="card-text">
+                        <h3 data-i18n="our_goals">Our Goals</h3>
+                        <ul>
+                            <li data-i18n="goals_li1">Socialization</li>
+                            <li data-i18n="goals_li2">Mutual respect</li>
+                            <li data-i18n="principles_li3">Cooperation</li>
+                            <li data-i18n="principles_li4">Self-esteem</li>
+                            <li data-i18n="principles_li5">Love for learning and creation</li>
+                            <li data-i18n="principles_li6">HAPPY FACES…</li>
+                        </ul>
+                    </div>
                 </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/foot-print.jpg" alt="childs footprint">
+                    </div>
+                    <div class="card-text">
+                        <h3 data-i18n="care_h3">Care and Education of Our Little Friends</h3>
+                        <ul>
+                            <li data-i18n="care_li1">Meets the needs for security, affection, love…</li>
+                            <li data-i18n="care_li2">Recreational activities (teamwork)</li>
+                            <li data-i18n="care_li3">Development of creativity of expression (mentally and skills)</li>
+                            <li data-i18n="care_li4">Free and creative play</li>
+                            <li data-i18n="care_li5">Development of initiative and independence</li>
+                            <li data-i18n="care_li6">Respect for everyone's cultural and religious identity</li>
+                            <li data-i18n="care_li7">To be able to socialize with all people (young and old)….</li>
+                        </ul>
+                    </div>
+                </div>
+
+        </section>
+
+        <section class="departments">
+            <div class="content-wrapper">
+                <h2 class="class-title" data-i18n="our_classes">Our Classes</h2>
+
+                <div class="class-card">
+                    <img class="class-img" src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
+                    <h3 data-i18n="class1_age">4 Months - 2 Years</h3>
+                    <button class="classBtn" data-i18n="learn_more">Learn More</button>
+                </div>
+
+                <div class="class-card">
+                    <img class="class-img" src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
+                    <h3 data-i18n="class2_age">2-3 Years</h3>
+                    <button class="classBtn" data-i18n="learn_more">Learn More</button>
+                </div>
+
+                <div class="class-card">
+                    <img class="class-img" src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
+                    <h3 data-i18n="class3_age">3-4 & 4-5 Years</h3>
+                    <button class="classBtn" data-i18n="learn_more">Learn More</button>
+                </div>
+
             </div>
-
-    </section>
-
-    <section class="departments">
-        <div class="content-wrapper">
-            <h2 class="class-title" data-i18n="our_classes">Our Classes</h2>
-
-            <div class="class-card">
-                <img class="class-img" src="./img/colin-maynard-CEEhmAGpYzE-unsplash.jpg">
-                <h3 data-i18n="class1_age">4 Months - 2 Years</h3>
-                <button class="classBtn" data-i18n="learn_more">Learn More</button>
-            </div>
-
-            <div class="class-card">
-                <img class="class-img" src="./img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg">
-                <h3 data-i18n="class2_age">2-3 Years</h3>
-                <button class="classBtn" data-i18n="learn_more">Learn More</button>
-            </div>
-
-            <div class="class-card">
-                <img class="class-img" src="./img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg">
-                <h3 data-i18n="class3_age">3-4 & 4-5 Years</h3>
-                <button class="classBtn" data-i18n="learn_more">Learn More</button>
-            </div>
-
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer class="footer">
@@ -211,9 +217,11 @@
                 <ul>
                     <li class="footer-item">
                         <i class="fa-solid fa-location-dot icon"></i>
-                        <address class="address" data-i18n="address">
-                            11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
-                        </address>
+                        <a href="https://www.google.com/maps?q=11+Aristotelous+Street,+Agios+Sylas+4193,+Ypsonas,+Limassol"
+                            target="_blank">
+                            <address class="footer-address" data-i18n="address">
+                                11 Aristotelous Street,Agios Sylas 4193, Ypsonas, Limassol.
+                            </address>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope icon"></i>
@@ -231,15 +239,18 @@
                 </ul>
             </div>
             <div class="social">
-                <i class="fa-brands fa-facebook icon"></i>
+                <a href="https://www.facebook.com/PhanitasBabyClub/" class="fa-brands fa-facebook icon"></a>
                 <p data-i18n="follow_us">Follow Us</p>
             </div>
             <div class="quick-links">
                 <h5 data-i18n="quick_links">Quick Links</h5>
                 <ul>
-                    <li class="footer-quick-links"><a href="#" data-i18n="quick_school">Our School</a></li>
-                    <li class="footer-quick-links"><a href="#" data-i18n="quick_gallery">Gallery</a></li>
-                    <li class="footer-quick-links"><a href="#" data-i18n="quick_classes">Classes and Teachers</a></li>
+                    <li class="footer-quick-links"><a href="./our_school/index.html" data-i18n="quick_school">Our
+                            School</a></li>
+                    <li class="footer-quick-links"><a href="./gallery/index.html" data-i18n="quick_gallery">Gallery</a>
+                    </li>
+                    <li class="footer-quick-links"><a href="./teachers_classes/index.html"
+                            data-i18n="quick_classes">Classes and Teachers</a></li>
                     <li class="footer-quick-links"><a href="./contact/index.html" data-i18n="quick_contact">Contact
                             Us</a></li>
                 </ul>
