--- a/our_school/index.html
+++ b/our_school/index.html
@@ -67,14 +67,14 @@
     <!--main-->
     <main>
         <section class="our-school">
-            <div class="content-wrapper">
+            <div class="content-wrapper-school">
                 <h1>Our School</h1>
                 <div class="playground">
                     <div class="playground-img-wrapper">
-                        <h4>Exploring and Playing Safely: Our Outdoor Spaces</h4>
                         <img class="playground-img" src="../img/school-grounds.jpg" alt="our play ground">
                     </div>
                     <div class="playground-text">
+                        <h4>Exploring and Playing Safely: Our Outdoor Spaces</h4>
                         <p>At our kindergarten, we believe in the importance of outdoor play for toddlers. Our spacious
                             school yard is designed to encourage curiosity, creativity, and physical activity. Whether
                             it’s
@@ -94,10 +94,10 @@
                 <hr>
                 <div class="classroom">
                     <div class="class-img-wrapper">
-                        <h3>Creative Play in a Safe Classroom</h3>
                         <img class="classroom-img" src="../img/school-grounds-2.jpg" alt="our class room">
                     </div>
                     <div class="class-play-text">
+                        <h3>Creative Play in a Safe Classroom</h3>
                         <p>Our classroom is a space for children to explore, create, and imagine. With a safe wooden
                             floor,
                             kids can move freely as they engage in imaginative play, focused activities, and creative
